mobile erro layout

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main class="main-content">
 
-        <section class="main-content-section">
+        <section>
             <h2>Sobre mim</h2>
             <p>Experiências em pequenos projetos de HTML, CSS e Javascript, aprendendo atualmente como trabalhar com
                 frameworks e banco de dados. Bolsista na uni Carioca, me destacando por ser sempre proativo e gostar de
@@ -48,10 +48,11 @@
                 tecnologia. </p>
         </section>
         <!--            <section> criará uma quebra de linha na pagina definindo o fim e o começo de uma sessão</section>-->
+        
         <section class="main-content-section">
             <!--                place hoder é apenas uma dica, as vezes nem é lido pelo browser. TODO O SITE DEVE ESTAR ACESSIVEL nunca deve substituir o label-->
 
-            <h3>Habilidades</h3>
+            <h2>Habilidades</h2>
             <table class="table">
                 <thead>
                     <tr>
@@ -111,8 +112,8 @@
                 </tbody>
             </table>
         </section>
-        <section class="main-content-section">
-            <h3>Projetos de aprendizado</h3>
+        <section>
+            <h2>Projetos de aprendizado</h2>
 
             <div class="row">
                 <div class="col-1">
@@ -157,25 +158,23 @@
                                 <!--row-->
         </section>
         <section class="main-content-section">
-            <h3>Redes e contato</h3>
+            <h2>Redes e contato</h2>
                 <ul class="ul-icons">
                     <li><a target="_blank" href="https://pt.stackoverflow.com/users/181036/leonardo-pinto-silva"><span
-                        class="hidden">Stackoverflow profile</span><i class="fab fa-stack-overflow fa-3x icon-link"></i></i></a></li>
-                        <li><a target="_blank" href="https://github.com/KallDrayck"><span
+                            class="hidden">Stackoverflow profile</span><i class="fab fa-stack-overflow fa-3x icon-link"></i></i></a></li>
+                    <li><a target="_blank" href="https://github.com/KallDrayck"><span
                             class="hidden">Github profile</span><i class="fab fa-github fa-3x icon-link"></i></i></a></li>
                     <li><a target="_blank" href="https://twitter.com/LeoPintoSilva"><span
-                                class="hidden">Twitter</span><i class="fab fa-twitter fa-3x icon-link"></i></a></li>
+                            class="hidden">Twitter</span><i class="fab fa-twitter fa-3x icon-link"></i></a></li>
                     <li><a target="_blank" href="https://www.instagram.com/drayck/?hl=pt-br"><span
-                                class="hidden">Instagram</span><i class="fab fa-instagram fa-3x icon-link"></i></a></li>
+                            class="hidden">Instagram</span><i class="fab fa-instagram fa-3x icon-link"></i></a></li>
                     <li><a target="_blank" href="https://www.facebook.com/leonardo.pintosilva.1"><span
-                                class="hidden">Facebook</span><i class="fab fa-facebook fa-3x icon-link"></i></a></li>
+                             class="hidden">Facebook</span><i class="fab fa-facebook fa-3x icon-link"></i></a></li>
                     <li><a target="_blank" href="https://www.linkedin.com/in/leonardo-calazans-39a03213a/"
                         ><span class="hidden">Linkedin</span><i class="fab fa-linkedin fa-3x icon-link"></i></a></li>
                     <li><a target="_blank" href="https://api.whatsapp.com/send?phone=5521966479443&text=Bem%20vindo%2C%20voc%C3%AA%20foi%20direcionado%20do%20site%20curr%C3%ADculo.%20Deixe%20sua%20mensagem%20que%20sera%20respondido%20em%20breve"><span class="hidden">Whatsapp</span><i class="fab fa-whatsapp fa-3x icon-link"></i></a></li>
                 </ul>
-        </section>
-
-        <section class="main-content-section"></section>
+       
         <div class="col-1">
             <address>
                 <!--                 serve para dar expor a informação do dono do site, para entrar em contato-->
@@ -221,5 +220,4 @@
     </footer>
 
 </body>
-
 </html>
