--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
                 <p>
                     <span>E-mail:</span><br> 
-                    leonardopintosilva@hotmail.com
+                    leonardo-calazans@outlook.com
                 </p>
                 <!--                    assim  fica muito mais semantico, a maquina consegue entender, o leitor de tela consegue entender, o mecanismo de busca consegue entender. E todos eles tão dentro da tag address que representa a forma de contato do dono do site, ou se tivesse numa tag article do dono daquele artigo-->
             </address>
