--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!-- doctype informa ao agente de usuario a versão do html que deve ser renderizada-->
 <html lang="pt-br">
 
 <head>
@@ -17,9 +16,6 @@
     <link rel="stylesheet" href="css/normalize.css">
     <!--        Esse link foi tirado do site css normalize ou css reset, ele faz uma formatação da maioria dos navegadores deixando pronto pra edição mais detalhada do css estilo. ELA DEVE VIR PRIMEIRO, pois assim toda edição a seguir vem depois dela.-->
     <link rel="stylesheet" href="css/estilo.css">
-    <!--            <script src="https://kit.fontawesome.com/5d7e463fbe.js" crossorigin="anonymous"></script>-->
-    <!--            teste para poder usar icones na minha pagina, importando do site da fot-awesome-->
-    <!-- <meta name="viewport" content="width=device-width, inital-scale=1.0">    -->
 </head>
 
 <body>
@@ -70,10 +66,31 @@
                 </tfoot>
                 <tbody class="table-tbody">
                     <tr>
-                        <td>Cursando na Unicarioca</td>
+                        <td>Unicarioca</td>
                         <td>ANALISE E DESENVOLVILMENTO DE SISTEMAS</td>
-                        <td>3º Periodo na Unicarioca 2021.1</td>
+                        <td>3º Periodo na Unicarioca 2021.1 - Cursando</td>
                     </tr>
+                    <tr>
+                        <td>Linguagens de programação</td>
+                        <td>C – JAVASCRIPT</td>
+                        <td>Nivel Básico</td>
+                    </tr>
+                    <tr>
+                        <td>Udemy</td>
+                        <td>Curso Web Design Completo: HTML5, CSS3 e JS</td>
+                        <td>Intermediário</td>
+                    </tr>
+                     <tr>
+                        <td>Origamid</td>
+                        <td>Frontend fullstack</td>
+                        <td>Cursando</td>
+                    </tr>
+                    <tr>
+                        <td>Udemy</td>
+                        <td>O curso completo de Banco de Dados e SQL</td>
+                        <td>Cursando</td>
+                    </tr>
+                    
                     <tr>
                         <td>Autodidata</td>
                         <td>INGLÊS BÁSICO</td>
@@ -83,26 +100,6 @@
                         <td>Autodidata</td>
                         <td>MICROSOFT OFFICE</td>
                         <td>Word e Exel básico</td>
-                    </tr>
-                    <tr>
-                        <td>Linguagens de programação</td>
-                        <td>C – JAVASCRIPT</td>
-                        <td>Nivel intermediário</td>
-                    </tr>
-                    <tr>
-                        <td>Udemy</td>
-                        <td>Curso Web Design Completo: HTML5, CSS3 e JS</td>
-                        <td>Básico ao avançado</td>
-                    </tr>
-                    <tr>
-                        <td>Udemy</td>
-                        <td>O curso completo de Banco de Dados e SQL</td>
-                        <td>Cursando</td>
-                    </tr>
-                    <tr>
-                        <td>Cursando Origamid</td>
-                        <td>Frontend fullstack</td>
-                        <td>Básico ao avançado</td>
                     </tr>
                     <tr>
                         <td>Autodidata</td>
