--- a/index.html
+++ b/index.html
@@ -117,13 +117,25 @@
 
                     <article class="recent-works-card">
                         <a class="imagem-link" target="_blank"
+                            href="https://kalldrayck.github.io/origamid-bikcraft/">
+                            <img src="https://kalldrayck.github.io/origamid-bikcraft/img/bikcraft.svg" alt="Github Projeto Bikcraft">
+                            <p class="recent-works-card-title"><strong>Projeto Bikcraft </strong> </p>
+                        </a>
+                    </article>
+
+                </div>
+                <div class="col-1">
+
+                    <article class="recent-works-card">
+                        <a class="imagem-link" target="_blank"
                             href="https://kalldrayck.github.io/Projeto-responsivo-cursinho/">
-                            <img src="images/logo_mob.png" alt="Github Projeto responsivo">
+                            <img src="https://kalldrayck.github.io/Projeto-responsivo-cursinho/images/logo_mob.svg" alt="Github Projeto responsivo">
                             <p class="recent-works-card-title"><strong>Projeto responsivo </strong> </p>
                         </a>
                     </article>
 
                 </div>
+
                 <div class="row">
                         <!--row-->
                         <div class="row">
