--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         </a>
         <h1 class="main-header-title">
             <strong>Leonardo Pinto Silva Calazans</strong><br>
-            Estudante de Análise e Desenvolvimento de Sistemas <br>
+            Estudante de Ciência da Computação <br>
             Unicarioca<br>
-            <!--<br> serve par pula a linha e <strong>negrito</strong>-->
         </h1>
 
     </header>
@@ -39,7 +38,7 @@
         <section>
             <h2>Sobre mim</h2>
             <p>Experiências em pequenos projetos de HTML, CSS e Javascript, aprendendo atualmente como trabalhar com
-                frameworks e banco de dados. Bolsista na uni Carioca, me destacando por ser sempre proativo e gostar de
+                frameworks e banco de dados. Bolsista na Unicarioca, me destacando por ser sempre proativo e gostar de
                 desafios, sem medo de sair da zona de conforte e esforçado, busco uma nova carreira na área de
                 tecnologia. </p>
         </section>
@@ -67,8 +66,8 @@
                 <tbody class="table-tbody">
                     <tr>
                         <td>Unicarioca</td>
-                        <td>ANALISE E DESENVOLVILMENTO DE SISTEMAS</td>
-                        <td>3º Periodo na Unicarioca 2021.1 - Cursando</td>
+                        <td>CIÊNCIA DA COMPUTAÇÃO</td>
+                        <td>2º Periodo na Unicarioca 2021.1 - Cursando</td>
                     </tr>
                     <tr>
                         <td>Linguagens de programação</td>
