atualizacao favicon e css responsive erro

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <title>Leonardo Pinto Silva Calazans - Curriculum</title>
     <meta charset="utf-8">
     <meta name="author" content="Leonardo Pinto Silva Calazans">
-    <meta name="description" content="Projeto curriculo">
+    <meta name="description" content="Curriculo Leonardo Pinto Silva Calazans">
     <meta name="keywords" content="html5, tecnologia, css, curriculum, curriculo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta property="og:title" content="Curriculo Leonardo Pinto Silva Calazans"/>
+    <meta property="og:description" content="Curriculo Leonardo Pinto Silva Calazans" />
+    <meta property="og:url" content="http://leonardocalazans.github.io/Curriculo/" />
+    
+    <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!--        Esse link é do site google fonts, que disponibiliza fonts de graça pra você colocar no seu navegador, mas deve ser aplicada no css, senão nada vai mudar no seu navegador-->
     <link href="fontawesome/css/all.css" rel="stylesheet">
@@ -38,7 +42,7 @@
         <section>
             <h2>Sobre mim</h2>
             <p>
-                Experiências em pequenos projetos de HTML, CSS e Javascript, aprendendo atualmente como trabalhar com  frameworks e banco de dados. Seguindo o sonho de trabalhar e ter o domínio de tecnologias e  participação ativa na revolução digital que o mundo está passando. Extremamente  esforçado, determinado e com   fome de conhecimento. Estou disposto a aprender qualquer  coisa e não tenho medo de sair da minha zona de conforto.
+                Experiências em pequenos projetos de HTML, CSS, Javascript, C# WEB aprendendo atualmente como trabalhar com  frameworks e banco de dados. Seguindo o sonho de trabalhar e ter o domínio de tecnologias e  participação ativa na revolução digital que o mundo está passando. Extremamente  esforçado, determinado e com fome de conhecimento. Estou disposto a aprender qualquer coisa e não tenho medo de sair da minha zona de conforto.
             </p>
         </section>
         <!--            <section> criará uma quebra de linha na pagina definindo o fim e o começo de uma sessão</section>-->
@@ -71,7 +75,7 @@
                     <tr>
                         <td>Linguagens de programação</td>
                         <td>C# – JAVASCRIPT</td>
-                        <td>Nivel Intermediário</td>
+                        <td>Avançando para Intermediário</td>
                     </tr>
                     <tr>
                         <td>Udemy</td>
