Update link Bikcraft

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                     <article class="recent-works-card">
                         <a class="imagem-link" target="_blank"
-                           href="https://leonardocalazans.github.io/origamid-bikcraft/">
+                           href="https://leonardocalazans.github.io/BikCreaft/">
                             <img src="https://leonardocalazans.github.io/origamid-bikcraft/img/bikcraft.svg" alt="Github Projeto Bikcraft">
                             <p class="recent-works-card-title"><strong>Projeto Bikcraft </strong> </p>
                         </a>
