Atualização de curriculo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="Curriculo Leonardo Pinto Silva Calazans">
     <meta name="keywords" content="html5, tecnologia, css, curriculum, curriculo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Curriculo Leonardo Pinto Silva Calazans"/>
+    <meta property="og:title" content="Curriculo Leonardo Pinto Silva Calazans" />
     <meta property="og:description" content="Curriculo Leonardo Pinto Silva Calazans" />
     <meta property="og:url" content="http://leonardocalazans.github.io/Curriculo/" />
-    
+
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!--        Esse link é do site google fonts, que disponibiliza fonts de graça pra você colocar no seu navegador, mas deve ser aplicada no css, senão nada vai mudar no seu navegador-->
@@ -26,8 +26,8 @@
 
     <header class="main-header">
         <a href="index.html" target="_blank" class="main-header-link imagem-link">
-            <img src="images/avatar_640.jpeg.jpeg"
-                 alt="Foto de perfil do Programador Leonardo sentado, homem, possue barba e traja uma camisa polo com listras horizontais azul e branco">
+            <img src="images/perfil.jpg"
+                alt="Foto de perfil do Programador Leonardo sentado, homem, possue barba e traja uma camisa polo com listras horizontais azul e branco">
         </a>
         <h1 class="main-header-title">
             <strong>Leonardo Pinto Silva Calazans</strong><br>
@@ -39,10 +39,14 @@
 
     <main class="main-content">
 
-        <section>
+        <section class="main-content-section-write">
             <h2>Sobre mim</h2>
             <p>
-                Experiências em pequenos projetos de HTML, CSS, Javascript, C# WEB aprendendo atualmente como trabalhar com  frameworks e banco de dados. Seguindo o sonho de trabalhar e ter o domínio de tecnologias e  participação ativa na revolução digital que o mundo está passando. Extremamente  esforçado, determinado e com fome de conhecimento. Estou disposto a aprender qualquer coisa e não tenho medo de sair da minha zona de conforto.
+                Experiências em pequenos projetos de HTML, CSS, Javascript, C# WEB aprendendo atualmente como trabalhar
+                com frameworks e banco de dados. Seguindo o sonho de trabalhar e ter o domínio de tecnologias e
+                participação ativa na revolução digital que o mundo está passando. Extremamente esforçado, determinado e
+                com fome de conhecimento. Estou disposto a aprender qualquer coisa e não tenho medo de sair da minha
+                zona de conforto.
             </p>
         </section>
         <!--            <section> criará uma quebra de linha na pagina definindo o fim e o começo de uma sessão</section>-->
@@ -111,16 +115,16 @@
                 </tbody>
             </table>
         </section>
-        <section>
+        <section class="main-content-section-write">
             <h2>Projetos de aprendizado</h2>
 
             <div class="row">
                 <div class="col-1">
 
                     <article class="recent-works-card">
-                        <a class="imagem-link" target="_blank"
-                           href="https://leonardocalazans.github.io/BikCreaft/">
-                            <img src="https://leonardocalazans.github.io/Bikcraft/img/bikcraft.svg" alt="Github Projeto Bikcraft">
+                        <a class="imagem-link" target="_blank" href="https://leonardocalazans.github.io/BikCreaft/">
+                            <img src="images/bikcraft.jpg"
+                                alt="Github Projeto Bikcraft">
                             <p class="recent-works-card-title"><strong>Projeto Bikcraft </strong> </p>
                         </a>
                     </article>
@@ -130,8 +134,9 @@
 
                     <article class="recent-works-card">
                         <a class="imagem-link" target="_blank"
-                           href="https://leonardocalazans.github.io/Projeto-responsivo-cursinho/">
-                            <img src="https://leonardocalazans.github.io/Projeto-responsivo-cursinho/images/logo_mob.svg" alt="Github Projeto responsivo">
+                            href="https://leonardocalazans.github.io/Projeto-responsivo-cursinho/">
+                            <img src="https://leonardocalazans.github.io/Projeto-responsivo-cursinho/images/logo_mob.svg"
+                                alt="Github Projeto responsivo">
                             <p class="recent-works-card-title"><strong>Projeto responsivo </strong> </p>
                         </a>
                     </article>
@@ -145,12 +150,11 @@
 
                             <article class="recent-works-card">
                                 <a class="imagem-link" target="_blank"
-                                   href="https://github.com/leonardocalazans/NextLevelWeek3">
+                                    href="https://github.com/leonardocalazans/NextLevelWeek3">
                                     <img src="images/nlwwhite.png" alt="Github projeto NLW 3">
                                     <p class="recent-works-card-title">
                                         <strong>
-                                            Github - Imersão Next level week
-                                            3
+                                            Github - Imersão Next level week 3
                                         </strong>
                                     </p>
                                 </a>
@@ -163,21 +167,25 @@
 
                                 <article class="recent-works-card">
                                     <a class="imagem-link" target="_blank"
-                                       href="https://leonardocalazans.github.io/ProjetoInfusion/">
+                                        href="https://leonardocalazans.github.io/ProjetoInfusion/">
                                         <img src="images/infusion.png" alt="Projeto Infusion">
                                         <p class="recent-works-card-title"><strong>Infusion - Home Page</strong> </p>
                                     </a>
                                 </article>
 
                             </div>
-                            <!--row-->
+                        </div>
+                    </div>
+                </div>
+                <!--row-->
         </section>
         <section class="main-content-section">
             <h2>Redes e contato</h2>
             <ul class="ul-icons">
                 <li>
                     <a target="_blank" href="https://pt.stackoverflow.com/users/181036/leonardo-pinto-silva">
-                        <span class="hidden">Stackoverflow profile</span><i class="fab fa-stack-overflow fa-3x icon-link"></i></i>
+                        <span class="hidden">Stackoverflow profile</span><i
+                            class="fab fa-stack-overflow fa-3x icon-link"></i></i>
                     </a>
                 </li>
                 <li>
@@ -191,7 +199,7 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://www.instagram.com/drayck/?hl=pt-br">
+                    <a target="_blank" href="https://www.instagram.com/leonardopscalazans/">
                         <span class="hidden">Instagram</span><i class="fab fa-instagram fa-3x icon-link"></i>
                     </a>
                 </li>
@@ -201,9 +209,11 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://www.linkedin.com/in/leonardo-calazans-39a03213a/"><span class="hidden">Linkedin</span><i class="fab fa-linkedin fa-3x icon-link"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/leonardo-calazans-39a03213a/"><span
+                            class="hidden">Linkedin</span><i class="fab fa-linkedin fa-3x icon-link"></i></a>
                 </li>
-                <li><a target="_blank" href="https://api.whatsapp.com/send?phone=5521966479443&text=Bem%20vindo%2C%20voc%C3%AA%20foi%20direcionado%20do%20site%20curr%C3%ADculo.%20Deixe%20sua%20mensagem%20que%20sera%20respondido%20em%20breve"><span class="hidden">Whatsapp</span><i class="fab fa-whatsapp fa-3x icon-link"></i></a></li>
+                <li><a target="_blank" href="https://bit.ly/3jhQdUx"><span class="hidden">Whatsapp</span><i
+                            class="fab fa-whatsapp fa-3x icon-link"></i></a></li>
             </ul>
 
             <div class="col-1">
@@ -212,7 +222,8 @@
                     <p>
                         <span>Telefone:</span><br>
                         021-9-6647-9443<br>
-                        021-9-3300-0272
+                        021-9-3300-0272<br>
+                        021-9-2020-4374
                     </p>
 
                     <p>
@@ -222,10 +233,6 @@
                     <!--                    assim  fica muito mais semantico, a maquina consegue entender, o leitor de tela consegue entender, o mecanismo de busca consegue entender. E todos eles tão dentro da tag address que representa a forma de contato do dono do site, ou se tivesse numa tag article do dono daquele artigo-->
                 </address>
             </div>
-            <!--row-->
-            <!--                    segundo filho-->
-            </div>
-
         </section>
     </main>
 
@@ -248,11 +255,13 @@
                 </a>
             </li>
             <li>
-                <a target="_blank" href="https://www.linkedin.com/in/leonardo-calazans-39a03213a/"><span class="hidden">Linkedin</span><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/leonardo-calazans-39a03213a/"><span
+                        class="hidden">Linkedin</span><i class="fab fa-linkedin"></i></a>
             </li>
             <li>
                 <a target="_blank"
-                   href="https://api.whatsapp.com/send?phone=5521966479443&text=Bem%20vindo%2C%20voc%C3%AA%20foi%20direcionado%20do%20site%20curr%C3%ADculo.%20Deixe%20sua%20mensagem%20que%20sera%20respondido%20em%20breve"><span class="hidden">Whatsapp</span><i class="fab fa-whatsapp"></i></a>
+                    href="https://api.whatsapp.com/send?phone=5521966479443&text=Bem%20vindo%2C%20voc%C3%AA%20foi%20direcionado%20do%20site%20curr%C3%ADculo.%20Deixe%20sua%20mensagem%20que%20sera%20respondido%20em%20breve"><span
+                        class="hidden">Whatsapp</span><i class="fab fa-whatsapp"></i></a>
             </li>
         </ul>
         <ul class="copyright">
@@ -262,4 +271,5 @@
     </footer>
 
 </body>
+
 </html>
