--- a/index.html
+++ b/index.html
@@ -133,11 +133,10 @@
                 <div class="col-1">
 
                     <article class="recent-works-card">
-                        <a class="imagem-link" target="_blank"
-                            href="https://leonardocalazans.github.io/Projeto-responsivo-cursinho/">
-                            <img src="https://leonardocalazans.github.io/Projeto-responsivo-cursinho/images/logo_mob.svg"
-                                alt="Github Projeto responsivo">
-                            <p class="recent-works-card-title"><strong>Projeto responsivo </strong> </p>
+                        <a class="imagem-link" target="_blank" href="https://leonardocalazans.github.io/Discover-Rocketseat/">
+                            <img src="https://github.com/LeonardoCalazans/Discover-Rocketseat/blob/main/assets/logo.svg"
+                                alt="Github Projeto Discover dev.finance">
+                            <p class="recent-works-card-title"><strong>Projeto Discover dev.finance </strong> </p>
                         </a>
                     </article>
 
