--- a/index.html
+++ b/index.html
@@ -5,42 +5,55 @@
     <title>Leonardo Pinto Silva Calazans - Curriculum</title>
     <meta charset="utf-8">
     <meta name="author" content="Leonardo Pinto Silva Calazans">
-    <meta name="description" content="Curriculo Leonardo Pinto Silva Calazans">
-    <meta name="keywords" content="html5, tecnologia, css, curriculum, curriculo">
+    <meta name="description" content="Currículo / Portfólio Leonardo Pinto Silva Calazans">
+    <meta name="keywords" content="html5, tecnologia, css, curriculum, currículo, portfólio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Curriculo Leonardo Pinto Silva Calazans" />
-    <meta property="og:description" content="Curriculo Leonardo Pinto Silva Calazans" />
+    <meta property="og:title" content="Currículo / Portfólio Leonardo Pinto Silva Calazans" />
+    <meta property="og:description" content="Currículo / Portfólio Leonardo Pinto Silva Calazans" />
     <meta property="og:url" content="http://leonardocalazans.github.io/Curriculo/" />
 
     <link rel="shortcut icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <!--        Esse link é do site google fonts, que disponibiliza fonts de graça pra você colocar no seu navegador, mas deve ser aplicada no css, senão nada vai mudar no seu navegador-->
-    <link href="fontawesome/css/all.css" rel="stylesheet">
-    <!--        load all styles do site fontawesome, site de icones como facebook, twitter e instagram-->
-    <link rel="stylesheet" href="css/normalize.css">
-    <!--        Esse link foi tirado do site css normalize ou css reset, ele faz uma formatação da maioria dos navegadores deixando pronto pra edição mais detalhada do css estilo. ELA DEVE VIR PRIMEIRO, pois assim toda edição a seguir vem depois dela.-->
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-    <header class="main-header">
-        <a href="index.html" target="_blank" class="main-header-link imagem-link">
-            <img src="images/perfil.jpg"
-                alt="Foto de perfil do Programador Leonardo sentado, homem, possue barba e traja uma camisa polo com listras horizontais azul e branco">
-        </a>
-        <h1 class="main-header-title">
-            <strong>Leonardo Pinto Silva Calazans</strong><br>
-            Estudante de Ciência da Computação <br>
-            Unicarioca<br>
-        </h1>
+    <header class="header">
+        <h3>Portfólio</h3>
+        <nav>
+            <!-- <p>Home</p>
+            <p>Sobre mim</p>
+            <p>Experiência</p>
+            <p>Projetos</p> -->
+        </nav>
 
     </header>
 
-    <main class="main-content">
+    <main class="">
+        <section class="presentation">
+            <div>
+                <h3>OLÁ, EU SOU</h3>
+                <h1 id="name">LEONARDO CALAZANS</h1>
+                <h3>DESENVOLVEDOR FRONT-END</h3>
+            </div>
 
-        <section class="main-content-section-write">
-            <h2>Sobre mim</h2>
+            <div class="flex-sb">
+                <button class="button-flex border-gradient border-gradient-purple-left"><img src="/assets/linkedin.svg"
+                        width="24" height="24" />
+                    <p>Linkedin</p>
+                </button>
+                <button class="button-flex border-gradient border-gradient-pink-left"><img src="/assets/github.svg"
+                        width="24" height="24" />
+                    <p>Github</p>
+                </button>
+            </div>
+        </section>
+
+        <section class="about-me section">
+            <h2>SOBRE MIM</h2>
             <p>
                 Experiências em pequenos projetos de HTML, CSS, Javascript, C# WEB aprendendo atualmente como trabalhar
                 com frameworks e banco de dados. Seguindo o sonho de trabalhar e ter o domínio de tecnologias e
@@ -48,225 +61,110 @@
                 com fome de conhecimento. Estou disposto a aprender qualquer coisa e não tenho medo de sair da minha
                 zona de conforto.
             </p>
-        </section>
-        <!--            <section> criará uma quebra de linha na pagina definindo o fim e o começo de uma sessão</section>-->
 
-        <section class="main-content-section">
-            <!--                place hoder é apenas uma dica, as vezes nem é lido pelo browser. TODO O SITE DEVE ESTAR ACESSIVEL nunca deve substituir o label-->
+            <div class="flex-icon">
+                <img src="/assets/twitter.svg" width="24" height="24" />
+                <img src="/assets/facebook.svg" width="24" height="24" />
+                <img src="/assets/youtube.svg" width="24" height="24" />
+                <img src="/assets/figma.svg" width="24" height="24" />
+                <img src="/assets/twitch.svg" width="24" height="24" />
+            </div>
 
-            <h2>Habilidades</h2>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th class="table-th">Instituição</th>
-                        <th>Curso</th>
-                        <th class="table-th">Nivel</th>
-                    </tr>
-                </thead>
-                <tfoot>
-                    <tr>
-                        <td colspan="2"></td>
-                        <!--                            colspan serve para criar colunas invisiveis, para alinha o ultimo item-->
-                        <td></td>
-                    </tr>
-                </tfoot>
-                <tbody class="table-tbody">
-                    <tr>
-                        <td>Unicarioca</td>
-                        <td>CIÊNCIA DA COMPUTAÇÃO</td>
-                        <td>4º Periodo na Unicarioca 2021.2 - Cursando</td>
-                    </tr>
-                    <tr>
-                        <td>Linguagens de programação</td>
-                        <td>C# – JAVASCRIPT</td>
-                        <td>Avançando para Intermediário</td>
-                    </tr>
-                    <tr>
-                        <td>Udemy</td>
-                        <td>Curso Web Design Completo: HTML5, CSS3 e JS</td>
-                        <td>Intermediário</td>
-                    </tr>
-                    <tr>
-                        <td>Origamid</td>
-                        <td>Frontend fullstack</td>
-                        <td>Cursando</td>
-                    </tr>
-                    <tr>
-                        <td>Udemy</td>
-                        <td>O curso completo de Banco de Dados e SQL</td>
-                        <td>Cursando</td>
-                    </tr>
 
-                    <tr>
-                        <td>Autodidata</td>
-                        <td>INGLÊS BÁSICO</td>
-                        <td>Aprimorando todos os dias para o mercado de trabalho</td>
-                    </tr>
-                    <tr>
-                        <td>Autodidata</td>
-                        <td>MICROSOFT OFFICE</td>
-                        <td>Word e Exel básico</td>
-                    </tr>
-                    <tr>
-                        <td>Autodidata</td>
-                        <td>MONTAGEM E MANUTENÇÃO DE COMPUTADORES BASICA </td>
-                        <td>Desde sempre fazendo a propria manutenção e a de terceiros</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-        <section class="main-content-section-write">
-            <h2>Projetos de aprendizado</h2>
-
-            <div class="row">
-                <div class="col-1">
-
-                    <article class="recent-works-card">
-                        <a class="imagem-link" target="_blank" href="https://leonardocalazans.github.io/BikCreaft/">
-                            <img src="images/bikcraft.jpg"
-                                alt="Github Projeto Bikcraft">
-                            <p class="recent-works-card-title"><strong>Projeto Bikcraft </strong> </p>
-                        </a>
-                    </article>
-
-                </div>
-                <div class="col-1">
-
-                    <article class="recent-works-card">
-                        <a class="imagem-link" target="_blank" href="https://leonardocalazans.github.io/Discover-Rocketseat/">
-                            <img src="https://github.com/LeonardoCalazans/Discover-Rocketseat/blob/main/assets/logo.svg"
-                                alt="Github Projeto Discover dev.finance">
-                            <p class="recent-works-card-title"><strong>Projeto Discover dev.finance </strong> </p>
-                        </a>
-                    </article>
-
-                </div>
-
-                <div class="row">
-                    <!--row-->
-                    <div class="row">
-                        <div class="col-1">
-
-                            <article class="recent-works-card">
-                                <a class="imagem-link" target="_blank"
-                                    href="https://github.com/leonardocalazans/NextLevelWeek3">
-                                    <img src="images/nlwwhite.png" alt="Github projeto NLW 3">
-                                    <p class="recent-works-card-title">
-                                        <strong>
-                                            Github - Imersão Next level week 3
-                                        </strong>
-                                    </p>
-                                </a>
-                            </article>
-
-                        </div>
-                        <!--row-->
-                        <div class="row">
-                            <div class="col-1">
-
-                                <article class="recent-works-card">
-                                    <a class="imagem-link" target="_blank"
-                                        href="https://leonardocalazans.github.io/ProjetoInfusion/">
-                                        <img src="images/infusion.png" alt="Projeto Infusion">
-                                        <p class="recent-works-card-title"><strong>Infusion - Home Page</strong> </p>
-                                    </a>
-                                </article>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--row-->
-        </section>
-        <section class="main-content-section">
-            <h2>Redes e contato</h2>
-            <ul class="ul-icons">
-                <li>
-                    <a target="_blank" href="https://pt.stackoverflow.com/users/181036/leonardo-pinto-silva">
-                        <span class="hidden">Stackoverflow profile</span><i
-                            class="fab fa-stack-overflow fa-3x icon-link"></i></i>
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://github.com/leonardocalazans">
-                        <span class="hidden">Github profile</span><i class="fab fa-github fa-3x icon-link"></i></i>
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://twitter.com/LeoPintoSilva">
-                        <span class="hidden">Twitter</span><i class="fab fa-twitter fa-3x icon-link"></i>
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.instagram.com/leonardopscalazans/">
-                        <span class="hidden">Instagram</span><i class="fab fa-instagram fa-3x icon-link"></i>
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.facebook.com/leonardo.pintosilva.1">
-                        <span class="hidden">Facebook</span><i class="fab fa-facebook fa-3x icon-link"></i>
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.linkedin.com/in/leonardo-calazans-39a03213a/"><span
-                            class="hidden">Linkedin</span><i class="fab fa-linkedin fa-3x icon-link"></i></a>
-                </li>
-                <li><a target="_blank" href="https://bit.ly/3jhQdUx"><span class="hidden">Whatsapp</span><i
-                            class="fab fa-whatsapp fa-3x icon-link"></i></a></li>
-            </ul>
-
-            <div class="col-1">
-                <address>
-                    <!--                 serve para dar expor a informação do dono do site, para entrar em contato-->
-                    <p>
-                        <span>Telefone:</span><br>
-                        021-9-6647-9443<br>
-                        021-9-3300-0272<br>
-                        021-9-2020-4374
-                    </p>
-
-                    <p>
-                        <span>E-mail:</span><br>
-                        leonardo-calazans@outlook.com
-                    </p>
-                    <!--                    assim  fica muito mais semantico, a maquina consegue entender, o leitor de tela consegue entender, o mecanismo de busca consegue entender. E todos eles tão dentro da tag address que representa a forma de contato do dono do site, ou se tivesse numa tag article do dono daquele artigo-->
-                </address>
+            <div class="flex-sb">
+                <button class="button-flex border-gradient border-gradient-pink-rigth"><img
+                        src="/assets/download-cloud.svg" width="24" height="24" />
+                    <p>Currículo</p>
+                </button>
+                <button class="button-flex border-gradient border-gradient-purple-rigth"><img src="/assets/mail.svg"
+                        width="24" height="24" />
+                    <p>E-mail</p>
+                </button>
             </div>
         </section>
+
+        <section class="experience">
+            <h2>EXPERIÊNCIA</h2>
+            <div class="flex-sb experience-company">
+                <h4 class="title-company selected">Voltz</h4>
+                <h4 class="title-company">Pacheco</h4>
+            </div>
+            <div class="m-p-0">
+                <h4>Estágio como desenvolvedor front-end mobile</h4>
+                <div class="flex-sb">
+                    <h5 class="title-company-descripition m-p-0">Voltz</h5>
+                    <h5 class="m-p-0">Outubro 2022 - Atual</h5>
+                </div>
+                <p class="m-p-0">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id egestas dui. Nullam finibus
+                    aliquam enim quis faucibus. Aenean ac commodo dolor, nec bibendum velit.
+                </p>
+            </div>
+
+        </section>
+
+        <section class="projects">
+            <h2>PROJETOS</h2>
+            <div class="projects">
+                <div>
+                    <div class="projects-no-photo">
+                        <h1>FOTO</h1>
+                    </div>
+                    <!-- <img src="/assets/photo.svg" width="312" height="130" /> -->
+                    <h4>Nome do projeto</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit interdum odio eu
+                        varius.
+                    </p>
+                    <p class="projects-tec">Tecnologias usadas no projeto</p>
+                    <button class="button-flex border-gradient border-gradient-purple-left projects-tec-button"><img
+                            src="/assets/link.svg" width="24" height="24" />
+                        <p>Visualizar</p>
+                    </button>
+                </div>
+            </div>
+            <div class="projects">
+                <div>
+                    <div class="projects-no-photo">
+                        <h1>FOTO</h1>
+                    </div>
+                    <!-- <img src="/assets/photo.svg" width="312" height="130" /> -->
+                    <h4>Nome do projeto</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit interdum odio eu
+                        varius.
+                    </p>
+                    <p class="projects-tec">Tecnologias usadas no projeto</p>
+                    <button class="button-flex border-gradient border-gradient-purple-left projects-tec-button"><img
+                            src="/assets/link.svg" width="24" height="24" />
+                        <p>Visualizar</p>
+                    </button>
+                </div>
+            </div>
+            <div class="projects">
+                <div>
+                    <div class="projects-no-photo">
+                        <h1>FOTO</h1>
+                    </div>
+                    <!-- <img src="/assets/photo.svg" width="312" height="130" /> -->
+                    <h4>Nome do projeto</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit interdum odio eu
+                        varius.
+                    </p>
+                    <p class="projects-tec">Tecnologias usadas no projeto</p>
+                    <button class="button-flex border-gradient border-gradient-purple-left projects-tec-button"><img
+                            src="/assets/link.svg" width="24" height="24" />
+                        <p>Visualizar</p>
+                    </button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
-    <footer class="main-footer">
-
-        <ul class="ul-icons">
-            <li>
-                <a target="_blank" href="https://twitter.com/LeoPintoSilva">
-                    <span class="hidden">Twitter</span><i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li>
-                <a target="_blank" href="https://www.instagram.com/drayck/?hl=pt-br">
-                    <span class="hidden">Instagram</span><i class="fab fa-instagram"></i>
-                </a>
-            </li>
-            <li>
-                <a target="_blank" href="https://www.facebook.com/leonardo.pintosilva.1">
-                    <span class="hidden">Facebook</span><i class="fab fa-facebook"></i>
-                </a>
-            </li>
-            <li>
-                <a target="_blank" href="https://www.linkedin.com/in/leonardo-calazans-39a03213a/"><span
-                        class="hidden">Linkedin</span><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li>
-                <a target="_blank"
-                    href="https://api.whatsapp.com/send?phone=5521966479443&text=Bem%20vindo%2C%20voc%C3%AA%20foi%20direcionado%20do%20site%20curr%C3%ADculo.%20Deixe%20sua%20mensagem%20que%20sera%20respondido%20em%20breve"><span
-                        class="hidden">Whatsapp</span><i class="fab fa-whatsapp"></i></a>
-            </li>
-        </ul>
-        <ul class="copyright">
-            <li>© Untitled</li>
-            <li>Design: <a herf="#">HTML5 UP</a></li>
-        </ul>
+    <footer class="">
+        <p>© 2022 - Leonardo Calazans</p>
     </footer>
 
 </body>
