refactor and style: changing button and text styles in html

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             </div>
 
             <div class="flex-sb">
-                <button class="button-flex border-gradient border-gradient-purple-left"><img src="/assets/linkedin.svg"
+                <button class="button-flex button-grad"><img alt="Botão para o Linkedin" src="/assets/linkedin.svg"
                         width="24" height="24" />
                     <p>Linkedin</p>
                 </button>
-                <button class="button-flex border-gradient border-gradient-pink-left"><img src="/assets/github.svg"
+                <button class="button-flex button-grad-blue"><img alt="Botão para o github" src="/assets/github.svg"
                         width="24" height="24" />
                     <p>Github</p>
                 </button>
@@ -55,28 +55,24 @@
         <section class="about-me section">
             <h2>SOBRE MIM</h2>
             <p>
-                Experiências em pequenos projetos de HTML, CSS, Javascript, C# WEB aprendendo atualmente como trabalhar
-                com frameworks e banco de dados. Seguindo o sonho de trabalhar e ter o domínio de tecnologias e
-                participação ativa na revolução digital que o mundo está passando. Extremamente esforçado, determinado e
-                com fome de conhecimento. Estou disposto a aprender qualquer coisa e não tenho medo de sair da minha
-                zona de conforto.
+                Possuo boas softskills e vontade de aprender. Tendo experiência em uma Fintech, trabalhando com metodologias ágeis, padronização de código, arquitetura de projeto e sendo elogiado pelo bom relacionamento nas equipes. É importante ter domínio em tecnologias, porém, também é importante saber comunicar-se e lidar com diferentes tipos de pessoas.
             </p>
 
             <div class="flex-icon">
-                <img src="/assets/twitter.svg" width="24" height="24" />
-                <img src="/assets/facebook.svg" width="24" height="24" />
-                <img src="/assets/youtube.svg" width="24" height="24" />
-                <img src="/assets/figma.svg" width="24" height="24" />
-                <img src="/assets/twitch.svg" width="24" height="24" />
+                <img alt="Link para facebook" class="icon" src="/assets/facebook.svg" width="24" height="24" />
+                <img alt="Link para twitter" class="icon" src="/assets/twitter.svg" width="24" height="24" />
+                <img alt="Link para youtube" class="icon" src="/assets/youtube.svg" width="24" height="24" />
+                <img alt="Link para figma" class="icon" src="/assets/figma.svg" width="24" height="24" />
+                <img alt="Link para twitch" class="icon" src="/assets/twitch.svg" width="24" height="24" />
             </div>
 
 
             <div class="flex-sb">
-                <button class="button-flex border-gradient border-gradient-pink-rigth"><img
-                        src="/assets/download-cloud.svg" width="24" height="24" />
+                <button class="button-flex button-grad-blue">
+                    <img alt="Botão para baixar o currículo" src="/assets/download-cloud.svg" width="24" height="24" />
                     <p>Currículo</p>
                 </button>
-                <button class="button-flex border-gradient border-gradient-purple-rigth"><img src="/assets/mail.svg"
+                <button class="button-flex button-grad"><img alt="Botão para enviar E-mail" src="/assets/mail.svg"
                         width="24" height="24" />
                     <p>E-mail</p>
                 </button>
@@ -96,8 +92,7 @@
                     <h5 class="m-p-0">Outubro 2022 - Atual</h5>
                 </div>
                 <p class="m-p-0">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id egestas dui. Nullam finibus
-                    aliquam enim quis faucibus. Aenean ac commodo dolor, nec bibendum velit.
+                    Trabalhando no projeto do aplicativo da empresa, cumprindo prazos, entregando novas funcionalidades e fazendo correções. Participando dos ritos de metodologias ágeis como KANBAN e SCRUM, garantindo o crescimento do time a cada sprint.
                 </p>
             </div>
 
@@ -110,14 +105,13 @@
                     <div class="projects-no-photo">
                         <h1>FOTO</h1>
                     </div>
-                    <!-- <img src="/assets/photo.svg" width="312" height="130" /> -->
                     <h4>Nome do projeto</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit interdum odio eu
                         varius.
                     </p>
                     <p class="projects-tec">Tecnologias usadas no projeto</p>
-                    <button class="button-flex border-gradient border-gradient-purple-left projects-tec-button"><img
+                    <button class="button-flex button-projeto button-grad-blue"><img alt="Visualizar projeto ..."
                             src="/assets/link.svg" width="24" height="24" />
                         <p>Visualizar</p>
                     </button>
@@ -128,14 +122,13 @@
                     <div class="projects-no-photo">
                         <h1>FOTO</h1>
                     </div>
-                    <!-- <img src="/assets/photo.svg" width="312" height="130" /> -->
                     <h4>Nome do projeto</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit interdum odio eu
                         varius.
                     </p>
                     <p class="projects-tec">Tecnologias usadas no projeto</p>
-                    <button class="button-flex border-gradient border-gradient-purple-left projects-tec-button"><img
+                    <button class="button-flex button-projeto button-grad-blue"><img alt="Visualizar projeto ..."
                             src="/assets/link.svg" width="24" height="24" />
                         <p>Visualizar</p>
                     </button>
@@ -146,14 +139,13 @@
                     <div class="projects-no-photo">
                         <h1>FOTO</h1>
                     </div>
-                    <!-- <img src="/assets/photo.svg" width="312" height="130" /> -->
                     <h4>Nome do projeto</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit interdum odio eu
                         varius.
                     </p>
                     <p class="projects-tec">Tecnologias usadas no projeto</p>
-                    <button class="button-flex border-gradient border-gradient-purple-left projects-tec-button"><img
+                    <button class="button-flex button-projeto button-grad-blue"><img alt="Visualizar projeto ..."
                             src="/assets/link.svg" width="24" height="24" />
                         <p>Visualizar</p>
                     </button>
