style(padding): adding paddin

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
         <section class="about-me section">
             <h2>SOBRE MIM</h2>
             <p>
-                Possuo boas softskills e vontade de aprender. Tendo experiência em uma Fintech, trabalhando com metodologias ágeis, padronização de código, arquitetura de projeto e sendo elogiado pelo bom relacionamento nas equipes. É importante ter domínio em tecnologias, porém, também é importante saber comunicar-se e lidar com diferentes tipos de pessoas.
+                Possuo boas softskills e vontade de aprender. Tendo experiência em uma Fintech, trabalhando com
+                metodologias ágeis, padronização de código, arquitetura de projeto e sendo elogiado pelo bom
+                relacionamento nas equipes. É importante ter domínio em tecnologias, porém, também é importante saber
+                comunicar-se e lidar com diferentes tipos de pessoas.
             </p>
 
             <div class="flex-icon">
@@ -92,15 +95,17 @@
                     <h5 class="m-p-0">Outubro 2022 - Atual</h5>
                 </div>
                 <p class="m-p-0">
-                    Trabalhando no projeto do aplicativo da empresa, cumprindo prazos, entregando novas funcionalidades e fazendo correções. Participando dos ritos de metodologias ágeis como KANBAN e SCRUM, garantindo o crescimento do time a cada sprint.
+                    Trabalhando no projeto do aplicativo da empresa, cumprindo prazos, entregando novas funcionalidades
+                    e fazendo correções. Participando dos ritos de metodologias ágeis como KANBAN e SCRUM, garantindo o
+                    crescimento do time a cada sprint.
                 </p>
             </div>
 
         </section>
 
-        <section class="projects">
+        <section class="projects section">
             <h2>PROJETOS</h2>
-            <div class="projects">
+            <div class="project">
                 <div>
                     <div class="projects-no-photo">
                         <h1>FOTO</h1>
@@ -117,7 +122,7 @@
                     </button>
                 </div>
             </div>
-            <div class="projects">
+            <div class="project">
                 <div>
                     <div class="projects-no-photo">
                         <h1>FOTO</h1>
@@ -134,7 +139,7 @@
                     </button>
                 </div>
             </div>
-            <div class="projects">
+            <div class="project">
                 <div>
                     <div class="projects-no-photo">
                         <h1>FOTO</h1>
