feat(goHome): creating button scroll go top

--- a/index.html
+++ b/index.html
@@ -157,13 +157,15 @@
                 </div>
             </div>
         </section>
-
+        <a href="#" id="goHome" onclick="scroll()" title="Ir para o topo">Topo
+            <span></span>
+        </a>
     </main>
 
     <footer class="">
         <p>© 2022 - Leonardo Calazans</p>
     </footer>
-
+    <script src="./javascript/goHome.js"></script>
 </body>
 
 </html>
